; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_ubc_subr.c_ubc_setcred.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_ubc_subr.c_ubc_setcred.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vnode = type { %struct.ubc_info* }
%struct.ubc_info = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ubc_setcred(%struct.vnode* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.vnode*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.ubc_info*, align 8
  %7 = alloca i32, align 4
  store %struct.vnode* %0, %struct.vnode** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load %struct.vnode*, %struct.vnode** %4, align 8
  %9 = call i32 @UBCINFOEXISTS(%struct.vnode* %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %32

12:                                               ; preds = %2
  %13 = load %struct.vnode*, %struct.vnode** %4, align 8
  %14 = call i32 @vnode_lock(%struct.vnode* %13)
  %15 = load %struct.vnode*, %struct.vnode** %4, align 8
  %16 = getelementptr inbounds %struct.vnode, %struct.vnode* %15, i32 0, i32 0
  %17 = load %struct.ubc_info*, %struct.ubc_info** %16, align 8
  store %struct.ubc_info* %17, %struct.ubc_info** %6, align 8
  %18 = load %struct.ubc_info*, %struct.ubc_info** %6, align 8
  %19 = getelementptr inbounds %struct.ubc_info, %struct.ubc_info* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  store i32 %20, i32* %7, align 4
  %21 = load i32, i32* %7, align 4
  %22 = call i32 @IS_VALID_CRED(i32 %21)
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %29, label %24

24:                                               ; preds = %12
  %25 = load i32, i32* %5, align 4
  %26 = call i32 @kauth_cred_proc_ref(i32 %25)
  %27 = load %struct.ubc_info*, %struct.ubc_info** %6, align 8
  %28 = getelementptr inbounds %struct.ubc_info, %struct.ubc_info* %27, i32 0, i32 0
  store i32 %26, i32* %28, align 4
  br label %29

29:                                               ; preds = %24, %12
  %30 = load %struct.vnode*, %struct.vnode** %4, align 8
  %31 = call i32 @vnode_unlock(%struct.vnode* %30)
  store i32 1, i32* %3, align 4
  br label %32

32:                                               ; preds = %29, %11
  %33 = load i32, i32* %3, align 4
  ret i32 %33
}

declare dso_local i32 @UBCINFOEXISTS(%struct.vnode*) #1

declare dso_local i32 @vnode_lock(%struct.vnode*) #1

declare dso_local i32 @IS_VALID_CRED(i32) #1

declare dso_local i32 @kauth_cred_proc_ref(i32) #1

declare dso_local i32 @vnode_unlock(%struct.vnode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
